# vision-transformer

./: .env.example  .gitignore  404.html  CHANGELOG.md  Makefile  README.md  index.html  mlflow.db  pyproject.toml  search.html
about/: index.html
docs/: mkdocs.yml
docs/docs/: about.md  index.md  mlflow.md  notebooks.md  prefect.md  tests.md
mlflow/: index.html
models/cvt-13/: history.csv  metrics.csv  predictions.csv
models/cvt-21/: history.csv  metrics.csv  predictions.csv
models/swimv2/: history.csv  predictions.csv
models/swimv2-large/: predictions.csv
models/swimv2-tiny/: history.csv
models/swinv2-base/: history.csv  metrics.csv  predictions.csv
models/swinv2-large/: history.csv  metrics.csv  predictions.csv
models/swinv2-tiny/: history.csv  metrics.csv  predictions.csv
models/vit-base/: history.csv  metrics.csv  predictions.csv
models/vit-base-patch16-224/: history.csv  metrics.csv  predictions.csv
models/yolo11m-cls/: metrics.csv  predictions.csv
notebooks/: 0.01-exploracion-datos.ipynb  3.00-vit-base-example.ipynb  3.01-swinv2.ipynb  3.02-cvt.ipynb  3.03-vit-base.ipynb  3.04-yolo.ipynb  4.01-analisis-resultados-no-overlap.ipynb  4.01-analisis-resultados.ipynb  analisis_resultados_modelos.ipynb  data_exploration.ipynb  example.ipynb  index.html  radar_chart.json  swinv2.ipynb
prefect/: index.html
reports/: Link informe final y presentación
search/: search_index.json
tests/: index.html  test_config.py  test_dataset_flow.py  test_datset.py
vision_transformer/: .env.example  __init__.py  config.py  dataset.py  features.py  plots.py  utils.py
vision_transformer/flows/: cli.py  dataset_flow.py  evaluate_flow.py  train_flow.py
vision_transformer/modeling/: predict.py  train.py
