[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vision_transformer"
version = "0.0.1"
description = "This project is an implementation of a vision transformers to solve common tasks in computer vision."
authors = [{ name = "Your name (or your organization/company/team)" }]

readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "black",
  "flake8",
  "isort",
  "loguru",
  "mkdocs",
  "pip",
  "pytest",
  "python-dotenv",
  "tqdm",
  "typer",
  "requests (>=2.32.3,<3.0.0)",
  "scikit-learn (>=1.7.0,<2.0.0)",
  "transformers (>=4.52.4,<5.0.0)",
  "datasets (>=3.6.0,<4.0.0)",
  "pillow (>=11.2.1,<12.0.0)",
  "ipykernel (>=6.29.5,<7.0.0)",
  "ipywidgets (>=8.1.7,<9.0.0)",
  "matplotlib (>=3.10.3,<4.0.0)",
  "opencv-python (>=4.11.0.86,<5.0.0.0)",
  "torch (>=2.7.1,<3.0.0)",
  "torchvision (>=0.22.1,<0.23.0)",
  "evaluate (>=0.4.3,<0.5.0)",
  "accelerate (>=1.7.0,<2.0.0)",
  "plotly (>=6.1.2,<7.0.0)",
  "jupyter (>=1.1.1,<2.0.0)",
  "anywidget (>=0.9.18,<0.10.0)",
  "kaleido (==0.1.0.post1)",
  "optuna (>=4.3.0,<5.0.0)",
  "mlflow (>=3.1.0,<4.0.0)",
  "prefect (>=3.4.6,<4.0.0)",
  "ultralytics (>=8.3.156,<9.0.0)",
  "mkdocs-jupyter (>=0.25.1,<0.26.0)",
]
requires-python = ">=3.11,<3.14"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["vision_transformer"]
force_sort_within_sections = true

[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = { source = "pytorch_gpu" }
torchvision = { source = "pytorch_gpu" }
